# Copyright 2010-2022 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

# OSS solvers
bool_flag(
    name = "with_cbc",
    build_setting_default = False,
)

config_setting(
    name = "use_cbc",
    flag_values = {
        ":with_cbc": "true",
    },
)

bool_flag(
    name = "with_scip",
    build_setting_default = True,
)

config_setting(
    name = "use_scip",
    flag_values = {
        ":with_scip": "true",
    },
)

cc_library(
    name = "binary_search",
    srcs = [],
    hdrs = ["binary_search.h"],
    deps = [
        "//ortools/base",
        "//ortools/base:dump_vars",
        "@com_google_absl//absl/numeric:int128",
    ],
)

cc_library(
    name = "hungarian",
    srcs = ["hungarian.cc"],
    hdrs = ["hungarian.h"],
    deps = [
        "//ortools/base",
        "//ortools/base:hash",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "hungarian_test",
    size = "medium",
    srcs = ["hungarian_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        ":hungarian",
        "//ortools/base",
        "//ortools/base:map_util",
        "@com_google_absl//absl/random:distributions",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "knapsack_solver_lib",
    srcs = ["knapsack_solver.cc"],
    hdrs = ["knapsack_solver.h"],
    copts = [] + select({
        ":use_cbc": ["-DUSE_CBC"],
        "//conditions:default": [],
    }) + select({
        ":use_scip": ["-DUSE_SCIP"],
        "//conditions:default": [],
    }),
    deps = [
        "//ortools/base",
        "//ortools/base:stl_util",
        "//ortools/linear_solver",
        "//ortools/util:bitset",
        "//ortools/util:time_limit",
    ],
)

# Weighted set covering
proto_library(
    name = "set_cover_proto",
    srcs = ["set_cover.proto"],
    deps = ["//ortools/util:int128_proto"],
)

cc_proto_library(
    name = "set_cover_cc_proto",
    deps = [":set_cover_proto"],
)

cc_library(
    name = "set_cover_model",
    srcs = ["set_cover_model.cc"],
    hdrs = ["set_cover_model.h"],
    deps = [
        ":set_cover_cc_proto",
        "//ortools/lp_data:base",
        "@com_google_absl//absl/log:check",
    ],
)

cc_library(
    name = "set_cover_ledger",
    srcs = ["set_cover_ledger.cc"],
    hdrs = ["set_cover_ledger.h"],
    deps = [
        ":set_cover_model",
        "//ortools/base",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
    ],
)

cc_library(
    name = "set_cover_mip",
    srcs = ["set_cover_mip.cc"],
    hdrs = ["set_cover_mip.h"],
    deps = [
        ":set_cover_ledger",
        "//ortools/linear_solver",
        "//ortools/lp_data:base",
        "@com_google_absl//absl/log:check",
    ],
)

cc_library(
    name = "set_cover_utils",
    srcs = ["set_cover_utils.cc"],
    hdrs = ["set_cover_utils.h"],
    deps = [
        ":set_cover_ledger",
        ":set_cover_model",
        "//ortools/base:adjustable_priority_queue",
    ],
)

cc_library(
    name = "set_cover",
    srcs = ["set_cover.cc"],
    hdrs = ["set_cover.h"],
    deps = [
        ":set_cover_mip",
        ":set_cover_utils",
        "//ortools/base",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/random",
    ],
)

cc_test(
    name = "set_cover_test",
    size = "medium",
    timeout = "long",
    srcs = ["set_cover_test.cc"],
    deps = [
        ":set_cover",
        "@com_google_absl//absl/log",
        "@com_google_benchmark//:benchmark",
        "@com_google_googletest//:gtest_main",
    ],
)

# Graph automorphism libraries.

cc_library(
    name = "dense_doubly_linked_list",
    hdrs = ["dense_doubly_linked_list.h"],
    deps = [
        "//ortools/base",
    ],
)

cc_library(
    name = "dynamic_partition",
    srcs = ["dynamic_partition.cc"],
    hdrs = ["dynamic_partition.h"],
    deps = [
        "//ortools/base",
        "//ortools/base:murmur",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "sparse_permutation",
    srcs = ["sparse_permutation.cc"],
    hdrs = ["sparse_permutation.h"],
    deps = [
        "//ortools/base",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "dynamic_permutation",
    srcs = ["dynamic_permutation.cc"],
    hdrs = ["dynamic_permutation.h"],
    deps = [
        ":sparse_permutation",
        "//ortools/base",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "find_graph_symmetries",
    srcs = ["find_graph_symmetries.cc"],
    hdrs = ["find_graph_symmetries.h"],
    deps = [
        ":dense_doubly_linked_list",
        ":dynamic_partition",
        ":dynamic_permutation",
        ":sparse_permutation",
        "//ortools/base",
        "//ortools/graph",
        "//ortools/graph:iterators",
        "//ortools/graph:util",
        "//ortools/util:stats",
        "//ortools/util:time_limit",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "find_graph_symmetries_test",
    size = "medium",
    srcs = ["find_graph_symmetries_test.cc"],
    #copts = ["-Iexternal/gtest/include"],
    deps = [
        ":dynamic_partition",
        ":dynamic_permutation",
        ":find_graph_symmetries",
        ":sparse_permutation",
        "//ortools/base",
        "//ortools/base:dump_vars",
        "//ortools/base:map_util",
        "//ortools/base:path",
        "//ortools/graph:io",
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_googletest//:gtest_main",
    ],
)
