ENABLE_LANGUAGE(CXX)
SET(ROOT_PROJECT ${PROJECT_NAME})
PROJECT(${PROJECT_NAME}_algorithms)

FILE(GLOB ${PROJECT_NAME}_SOURCES "*.cc")
LIST(REMOVE_ITEM ${PROJECT_NAME}_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/hungarian_test.cc")

ADD_LIBRARY(${PROJECT_NAME} OBJECT ${${PROJECT_NAME}_SOURCES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)

ADD_DEPENDENCIES(${PROJECT_NAME} ${ROOT_PROJECT}Proto)